--- a/css/styles.css
+++ b/css/styles.css
@@ -52,9 +52,10 @@ a {
 }
 
 .sedona-hills {
-  background-image: url("../img/background-photo.jpg");
   width: 1200px;
   height: 800px;
+
+  background-image: url("../img/background-photo.jpg");
 }
 
 .main-section {
@@ -62,13 +63,16 @@ a {
 }
 
 .sedona-info {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 21px;
-  font-weight: bold;
   line-height: 26px;
+  font-weight: bold;
   text-align: center;
+  color: #000000
 }
 
 .sedona-more-info {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
   font-weight: normal;
@@ -81,13 +85,16 @@ a {
 }
 
 .booking-title {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 21px;
-  font-weight: bold;
   line-height: 26px;
+  font-weight: bold;
   text-align: center;
+  color: #000000
 }
 
 .booking-more-info {
+  font-family: "PT Sans", Arial, sans-serif;
   font-size: 14px;
   line-height: 26px;
   font-weight: normal;
@@ -96,69 +103,76 @@ a {
 }
 
 .booking-form-title {
+  font-family: "PT Sans", Arial, sans-serif;
   line-height: 26px;
   font-size: 21px;
-  color: white;
   letter-spacing: normal;
   text-align: center;
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
+  color: white;
+
   background-color: #766357;
 }
 
 .arriving-calendar {
   width: 346px;
   height: 38px;
+
   background-color: #f2f2f2;
   border: none;
 }
 
 .arriving-calendar::after {
   content: "";
-  background-image: url("../img/calendar.svg");
-  background-repeat: no-repeat;
-  display: block;
+
   width: 21px;
   height: 22px;
+
+  background-image: url("../img/calendar.svg");
+  background-repeat: no-repeat;
   opacity: 0.3;
+
+  display: block;
 }
 
-.decrease,
-.increase {
+.change-button {
+  width: 38px;
+  height: 38px;
+
   font: inherit;
   font-size: 24px;
   text-align: center;
   color: rgba(0, 0, 0, 0.3);
+
   border: none;
   background-color: #f2f2f2;
-  width: 38px;
-  height: 38px;
+
 }
 
-.decrease:hover,
-.decrease:focus,
-.increase:focus,
-.increase:hover {
+.change-button:hover,
+.change-button:focus {
   color: black;
 }
 
-.increase:active,
-.decrease:active {
+.change-button:active {
   color: #81b3d2;
 }
 
 .type-form-text {
+  width: 38px;
+  height: 38px;
+
   color: rgba(0, 0, 0, 0.3);
   border: none;
   background-color: #f2f2f2;
-  width: 38px;
-  height: 38px;
 }
 
 .popup-button {
   font: inherit;
   color: white;
+
   background-color: #81b3d2;
 }
 
@@ -168,8 +182,9 @@ a {
 }
 
 .popup-button:active {
-  background-color: #5496bd;
   color: rgba(255, 255, 255, 0.3);
+
+  background-color: #5496bd;
 }
 
 .main-footer {
@@ -204,31 +219,34 @@ a {
 
 .inner-page a {
   text-decoration: none;
+
   color: black;
 }
 
 .hotel-name {
   font-family: "PT Sans";
   font-size: 21px;
+  line-height: 26px;
   font-weight: bold;
   font-style: normal;
   font-stretch: normal;
-  line-height: 26px;
   letter-spacing: normal;
+  color: #000000;
 }
 
 .hotel-price {
   font-family: "PT Sans";
   font-size: 14px;
+  line-height: 21px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
-  line-height: 21px;
   color: #333333;
 }
 
 .more-button a {
   color: white;
+
   background-color: #81b3d2;
 }
 
@@ -239,11 +257,13 @@ a {
 
 .more-button a:active {
   color: rgba(255, 255, 255, 0.3);
+
   background-color: #5496bd;
 }
 
 .book-button a {
   color: white;
+
   background-color: #766357;
 }
 
@@ -254,23 +274,26 @@ a {
 
 .book-button a:active {
   color: rgba(255, 255, 255, 0.3);
+
   background-color: #503e33;
 }
 
 .hotel-rating {
   color: #666666;
+
   background-color: #f2f2f2;
 }
 
 .website-by {
   width: 74px;
   height: 11px;
+
   font-family: "PT Sans";
   font-size: 14px;
+  line-height: 1.86;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
-  line-height: 1.86;
   letter-spacing: normal;
   text-align: center;
   color: #000000;
